--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
@@ -29,6 +29,7 @@
     <script src="/codemirror/addon/comment/continuecomment.js"></script>
     <script src="/codemirror/addon/comment/comment.js"></script>
     <!-- 语法高亮 -->
+    <script src="/codemirror/mode/clike/clike.js"></script>
     <script src="/codemirror/mode/javascript/javascript.js"></script>
     <script src="/codemirror/mode/xml/xml.js"></script>
     <!-- 主题 -->
