--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -79,6 +79,16 @@
                             link: '/dashboard/documents/query'
                         }]
                     }, {
+                        id: 'devops',
+                        name: 'Devops',
+                        icon: 'dashboard',
+                        menus: [{
+                            id: 'jad',
+                            name: 'Jad',
+                            mini: 'JAD',
+                            link: '/dashboard/devops/jad'
+                        }]
+                    }, {
                         id: 'request-mapping',
                         name: 'RequestMapping',
                         icon: 'dashboard',
