[U] update devops add compile and redefine

--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -83,10 +83,10 @@
                         name: 'Devops',
                         icon: 'dashboard',
                         menus: [{
-                            id: 'jad',
-                            name: 'Jad',
-                            mini: 'JAD',
-                            link: '/dashboard/devops/jad'
+                            id: 'java',
+                            name: 'Java',
+                            mini: 'JVA',
+                            link: '/dashboard/devops/java'
                         }]
                     }, {
                         id: 'request-mapping',
