[U] update devops add logger

--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -61,7 +61,7 @@
                     }, {
                         id: 'documents',
                         name: 'Documents',
-                        icon: 'dashboard',
+                        icon: 'drafts',
                         menus: [{
                             id: 'entity',
                             name: 'Entity',
@@ -81,17 +81,22 @@
                     }, {
                         id: 'devops',
                         name: 'Devops',
-                        icon: 'dashboard',
+                        icon: 'policy',
                         menus: [{
                             id: 'java',
                             name: 'Java',
                             mini: 'JVA',
                             link: '/dashboard/devops/java'
+                        }, {
+                            id: 'logger',
+                            name: 'Logger',
+                            mini: 'LGE',
+                            link: '/dashboard/devops/logger'
                         }]
                     }, {
                         id: 'request-mapping',
                         name: 'RequestMapping',
-                        icon: 'dashboard',
+                        icon: 'api',
                         link: '/dashboard/request-mapping'
                     }]
                 }
