--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
@@ -52,7 +52,8 @@
     <!-- Plugin for the momentJs  -->
     <script src="/js/plugins/moment.min.js"></script>
     <!--  Plugin for Sweet Alert -->
-    <script src="/js/plugins/sweetalert2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+    <!--    <script src="/js/plugins/sweetalert2.js"></script>-->
     <!-- Forms Validations Plugin -->
     <script src="/js/plugins/jquery.validate.min.js"></script>
     <script src="/js/plugins/jquery.cookie.min.js"></script>
