--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -83,10 +83,10 @@
                         name: 'Devops',
                         icon: 'policy',
                         menus: [{
-                            id: 'java',
-                            name: 'Java',
-                            mini: 'JVA',
-                            link: '/dashboard/devops/java'
+                            id: 'hotswap',
+                            name: 'Hotswap',
+                            mini: 'HSP',
+                            link: '/dashboard/devops/hotswap'
                         }, {
                             id: 'logger',
                             name: 'Logger',
