--- a/final-framework/final-dashboard-ui/src/main/resources/templates/dashboard/login.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/dashboard/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" layout:decorate="layout/dashboard.html" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+<html lang="en" layout:decorate="layout/html.html" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 >
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <div layout:fragment="content">
     <div class="wrapper wrapper-full-page">
         <div class="page-header login-page header-filter" filter-color="black"
-             style="background-image: url('../../assets/img/login.jpg'); background-size: cover; background-position: top center;">
+             style="background-image: url('https://demos.creative-tim.com/material-dashboard-pro/assets/img/login.jpg'); background-size: cover; background-position: top center;">
             <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
             <div class="container">
                 <div class="row">
