[U] update Redis dashboard

--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -79,6 +79,11 @@
                             link: '/dashboard/documents/query'
                         }]
                     }, {
+                        id: 'redis',
+                        name: 'Redis',
+                        icon: 'policy',
+                        link: '/dashboard/redis'
+                    }, {
                         id: 'devops',
                         name: 'Devops',
                         icon: 'policy',
