--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -81,7 +81,7 @@
                     }, {
                         id: 'redis',
                         name: 'Redis',
-                        icon: 'policy',
+                        icon: 'memory',
                         link: '/dashboard/redis'
                     }, {
                         id: 'devops',
