--- a/docs/_includes/sidebar/sidebar.html
+++ b/docs/_includes/sidebar/sidebar.html
@@ -9,8 +9,8 @@
     <a class="simple-text logo-mini" href="{{ site.url }}">
       FFW
     </a>
-    <a class="simple-text logo-normal" href="{{ site.url }}">
-      Final Framework
+    <a class="simple-text logo-normal" style="text-transform: none" href="{{ site.url }}">
+      FinalFramework
     </a>
   </div>
   <div class="sidebar-wrapper">
