--- a/docs/_includes/sidebar/sidebar-menu.html
+++ b/docs/_includes/sidebar/sidebar-menu.html
@@ -23,7 +23,8 @@
             <span class="sidebar-normal" v-html="menu2.name"> Pricing </span>
           </a>
 
-          <a :href="menu2.url" aria-expanded="true" class="nav-link" :class="page.menus.length > 2 ? 'collapse' : ''"
+          <a :href="menu2.url" aria-expanded="true" class="nav-link"
+             :class="page.menus.length > 2 && page.menus[2] != 'index' ? 'collapse' : ''"
              v-if="menu2.menus">
             <span class="sidebar-mini" v-html="menu2.mini ? menu2.mini :  i1 + '.' + (i2 + 1)"> MLT </span>
             <span class="sidebar-normal"> <span v-html="menu2.name"></span></span>
